# dmcblog

./: .gitignore  .linkspector.yml  .nojekyll  README.md  _quarto.yml  about.html  about.qmd  index.html  index.qmd  listings.json  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  styles.css
.github/workflows/: deploy-site.yaml  linkspector.yaml
_site/: index.html  listings.json  search.json
_site/posts/hello-word/: index.html
_site/posts/post-with-code/: index.html
_site/posts/welcome/: index.html
bibs/: ml.bib  software.bib
posts/baby-1/: sandwich.html  sandwich.qmd
posts/binary-classification/: binary-classification.html  binary-classification.qmd
posts/ddpg/: ddpg.html  ddpg.qmd
posts/diambra-colab/: index.html  index.qmd
posts/ftx-blowup/: index.html  index.qmd
posts/hello-word/: index.html  index.qmd
posts/init-bagels/: bagels.html  bagels.qmd
posts/minigpt/: minigpt.html  minigpt.ipynb  minigpt.qmd
posts/mlflow-hydra/: mlflow-hydra.html  mlflow-hydra.qmd
posts/omscs-grad/: omscs-grad.html  omscs-grad.qmd
posts/post-with-code/: index.html  index.qmd
posts/ppo/: index.html  index.qmd
posts/sql-practice/: sql_practice.html  sql_practice.qmd
posts/unet-diffusion/: header.tex  unet-diffusion.html  unet-diffusion.qmd
posts/update-2024/: index.html  index.qmd
posts/use-shift/: index.html  index.qmd
posts/variational-autoencoder/: index.html  index.qmd
posts/vision-transformer/: vision-transformer.html  vision-transformer.qmd
posts/vqvae/: vqvae.html  vqvae.qmd
posts/welcome/: index.html  index.qmd
