[project]
name = "dmcblog"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "matplotlib-inline>=0.1.7",
    "numpy>=2.0.2",
    "pandas>=2.3.1",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "transformers>=4.53.2",
]
